--- a/content/ko/project/p1.md
+++ b/content/ko/project/p1.md
@@ -3,7 +3,7 @@ title: "프로젝트1"
 type: project          # ↑ 이게 레이아웃을 연결함
 date: 2025-10-21
 image:
-  filename: "p1.jpg"      # (같은 폴더에 있는 이미지 파일명) 또는 /media/..., https://... 도 가능
+  filename: "pro1.jpg"      # (같은 폴더에 있는 이미지 파일명) 또는 /media/..., https://... 도 가능
 period: "2025.03 ~ 2025.06"
 role: "ex) FE 개발"
 stack: ["Hugo", "Tailwind", "Go Templates"]
